--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app, Modern To-Do App"
+      content="Create and share collaborative To-Do Lists!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Collaborative To-Do App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
